re PR c++/20624 (wrong "control reaches end of non-void function" warning)

2005-08-19  Andrew Pinski  <pinskia@physics.uc.edu>

        PR middle-end/20624
        * g++.dg/warn/Wreturn-3.C: New test

2005-08-19  Andrew Pinski  <pinskia@physics.uc.edu>

        PR middle-end/20624
        * gimple-low.c (block_may_fallthru): Handle CLEANUP_POINT_EXPR by
        looking past it.

From-SVN: r103268